<resources>
    <string name="app_name">FindYoBus</string>
    <string name="login">Login</string>
    <string name="create_an_account">Create an Account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="already_have_an_account">Already have an Account</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">FindYoBus</string>
    <string name="nav_header_subtitle">~by Lovekesh Singh Tiwana</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="about_me">About me</string>
    <string name="maps">Maps</string>
</resources>